<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.uclgroupgh.integratedforms.activities.SignatureActivity">

        <RelativeLayout
            android:id="@+id/signature_pad_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/buttons_container">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/signature_pad_description"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/signature_pad_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="@string/agreement"
                android:textColor="@android:color/darker_gray" />

            <com.github.gcacace.signaturepad.views.SignaturePad xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/signature_pad"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="16dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn2"
                android:enabled="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClear"
                android:text="@string/clear_pad"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_btn"
                android:enabled="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onSave"
                android:text="@string/save_signature"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</layout>
