<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/logo_background"
            android:padding="8dp"
            android:theme="@style/Forframe">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/help"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginBottom="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:src="@drawable/round_help_24"
                            android:tint="@color/colorButton" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="5dp"
                                android:layout_weight="0.9"
                                android:fontFamily="@font/dosis_extrabold"
                                android:padding="5dp"
                                android:text="PARTICIPANTION IN AGRA FUNDED EXTENSION /KNOWLEDGE SHARING "
                                android:textAllCaps="true"
                                android:textColor="@color/grey_600"
                                android:textSize="@dimen/text_size_medium" />

                            <ImageView
                                android:id="@+id/close"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="0.1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackground"
                                android:src="@drawable/round_close_24" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorAccent" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="3dp"
                            android:text="@string/type_of_extension_event"
                            android:textSize="@dimen/text_size_tiny"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/typeofextension"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/background_edittext"
                            android:clickable="true"
                            android:drawablePadding="5dp"
                            android:focusable="false"
                            android:fontFamily="sans-serif-light"
                            android:inputType="text|textCapSentences"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textSize="15sp"
                            app:validateEmpty="@{true}" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="3dp"
                            android:text="Number completed"
                            android:textSize="@dimen/text_size_tiny"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/numbercompleted"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/background_edittext"
                            android:drawablePadding="5dp"
                            android:fontFamily="sans-serif-light"
                            android:inputType="number"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textSize="15sp"
                            app:validateEmpty="@{true}" />


                        <TextView
                            android:id="@+id/ind17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:paddingTop="5dp"
                            android:paddingBottom="15dp"
                            android:text="@string/ind17"
                            android:textAlignment="viewEnd"
                            android:textSize="@dimen/text_size_extra_small"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="Participants/Number reached (Farmers)"
                            android:textSize="@dimen/text_size_extra_small"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <RelativeLayout
                                android:id="@+id/gender_layout"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?android:attr/selectableItemBackground">

                                <CheckBox
                                    android:id="@+id/male"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="5dp"
                                    android:layout_toEndOf="@+id/male"
                                    android:fontFamily="sans-serif-light"
                                    android:text="@string/male"
                                    android:textSize="@dimen/text_size_medium" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/gender_layout2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?android:attr/selectableItemBackground">

                                <CheckBox
                                    android:id="@+id/female"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="5dp"
                                    android:layout_toEndOf="@+id/female"
                                    android:fontFamily="sans-serif-light"
                                    android:text="@string/female"
                                    android:textSize="@dimen/text_size_medium" />

                            </RelativeLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/ind18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:paddingTop="5dp"
                            android:paddingBottom="15dp"
                            android:text="@string/ind18"
                            android:textAlignment="viewEnd"
                            android:textSize="@dimen/text_size_extra_small"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="Participants/Number reached (Other value chain actors)"
                            android:textSize="@dimen/text_size_extra_small"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <RelativeLayout
                                android:id="@+id/gender_layout3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?android:attr/selectableItemBackground">

                                <CheckBox
                                    android:id="@+id/male2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="5dp"
                                    android:layout_toEndOf="@+id/male2"
                                    android:fontFamily="sans-serif-light"
                                    android:text="@string/male"
                                    android:textSize="@dimen/text_size_medium" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/gender_layout4"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?android:attr/selectableItemBackground">

                                <CheckBox
                                    android:id="@+id/female2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="5dp"
                                    android:layout_toEndOf="@+id/female2"
                                    android:fontFamily="sans-serif-light"
                                    android:text="@string/female"
                                    android:textSize="@dimen/text_size_medium" />

                            </RelativeLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/ind181"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingTop="5dp"
                            android:paddingBottom="15dp"
                            android:text="@string/ind18"
                            android:textAlignment="viewEnd"
                            android:textSize="@dimen/text_size_extra_small"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/round_save_alt_white_24"
                app:backgroundTint="@color/colorAccent"
                app:elevation="0dp"
                app:fabSize="mini"
                app:maxImageSize="20dp"
                app:rippleColor="@color/black_overlay" />
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>